# CPU_Emulator

./: .gitignore  CMakeLists.txt  CPU_Em.cpp  CPU_Em.hpp  Fibbonachi.txt  IO_dirs.hpp.in  Makefile  Stack.hpp  commands.cpp  err.txt  exception_codes.txt  in.txt  main.cpp  out.txt
Output/: err.txt  log.txt  out.txt
Programms/: Factorial.txt  Fibbonachi.pcs  Fibbonachi.txt  Fibbonachi_to_1000.txt  FunctionUsage.txt  Rubbish.pcs  Rubbish.txt  Test.txt
include/: Emulator.hpp  Preprocessor.hpp  State.hpp  codes.hpp  commands.hpp  my_funcs.hpp
libs/Stack/: CMakeLists.txt
libs/Stack/include/: Stack.hpp
libs/Stack/src/: Stack.cpp
libs/Stack/test/: README.txt  StackTest.cpp
src/: Emulator.cpp  Preprocessor.cpp  commands.cpp  main.cpp  my_funcs.cpp
